# droplet

./: CMakeLists.txt  README.md  build.bat
icons/: aeSoft2BoneIk.psd  aeSumFloatStack.psd  dpSoft2BoneIk.psd  out_dpSoft2BoneIk.psd
modules/: FindMaya.cmake
plug-ins/: droplet-win64-2018.mll  droplet.mll  droplet_windows_2019.mll
scripts/: AEdpFloatStackSumTemplate.mel  AEdpSoft2BoneIkTemplate.mel  AEdpUtilities.mel
src/: AuxMath.h  FloatOpCompound.cpp  FloatOpCompound.h  QuaternionTwist.cpp  QuaternionTwist.h  Soft2BoneIk.cpp  Soft2BoneIk.h  droplet.cpp  droplet.sln  droplet.vcxproj  droplet.vcxproj.filters  id_bank.txt
src/Auxillary/: AuxMath.h
src/Core/: Droplet.cpp  DropletNode.h  Registration.cpp  droplet.cpp
src/Nodes/Angles/: AngleAdd.h  AngleClamp.h  AngleDivide.h  AngleExponent.h  AngleMultiply.h  AnglePower.h  AngleRange.h  AngleSqrt.h  AngleSubtract.h
src/Nodes/Basic/: ACos.cpp  ACos.h  ASin.cpp  ASin.h  ATan.cpp  ATan.h  Cos.cpp  Cos.h  Exponent.cpp  Exponent.h  Power.cpp  Power.h  Sin.cpp  Sin.h  Sqrt.cpp  Sqrt.h  Tan.cpp  Tan.h
src/Nodes/Interpolation/: InterpolateAngleVectors.h  InterpolateAngles.h  InterpolateFloatVectors.h  InterpolateFloats.h  InterpolateMatrices.h  InterpolateQuaternions.h
src/Nodes/Rigging/: FacialMatrixBlender.cpp  FacialMatrixBlender.h  FootPivot.cpp  FootPivot.h  QuaternionTwist.cpp  QuaternionTwist.h  Soft2BoneIk.cpp  Soft2BoneIk.h
src/Nodes/Spaces/: DistanceBetweenMatrices.h  DistanceBetweenVectors.h  RelativeMatrix.h  TransformMixer.cpp  TransformMixer.h
src/Nodes/Stacks/: AngleStackDivide.cpp  AngleStackDivide.h  AngleStackMax.cpp  AngleStackMax.h  AngleStackMin.cpp  AngleStackMin.h  AngleStackMinus.cpp  AngleStackMinus.h  AngleStackMultiply.cpp  AngleStackMultiply.h  AngleStackRange.cpp  AngleStackRange.h  AngleStackSum.cpp  AngleStackSum.h  FloatStackDivide.cpp  FloatStackDivide.h  FloatStackMax.cpp  FloatStackMax.h  FloatStackMin.cpp  FloatStackMin.h  FloatStackMinus.cpp  FloatStackMinus.h  FloatStackMultiply.cpp  FloatStackMultiply.h  FloatStackRange.cpp  FloatStackRange.h  FloatStackSum.cpp  FloatStackSum.h
src/Nodes/Utility/: FloatOpCompound.cpp  FloatOpCompound.h
src/Nodes/Vectors/: AngleVectorAdd.h  AngleVectorDivide.h  AngleVectorScale.h  FloatVectorAdd.h  FloatVectorDivide.h  FloatVectorScale.h
src/Utilities/: Attributes.cpp  Attributes.h  Math.h  MathLib.h
